--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/video-react": "^0.15.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
